syntax = "proto3";

/***
Written by Samihan Nandedkar
CS 441
Fall 2021

This file defines the structure of a protobuf for the gRPC request to be done on the server.

 ***/

// This defines the package the template files will be created by ScalaPB library.
package com.samihann.gRpc;

// Defines the service with the RPC function.
// The gRPC client function will make a single request to the server and receive a single response back.
service LogSearch {
  rpc Search(SearchRequest) returns (SearchResponse) {}
}


// The request will be sent in following format.
message SearchRequest {
  string time = 1;
  string date = 2;
  string deltaTime = 3;
  string pattern = 4;
}

// The reponse will be received in the following format.
message SearchResponse {
  string result = 1;
}
